# gex-backtesting

./: .gitignore  CLAUDE.md  README.md  download_data.sh  pyproject.toml  setup_data.sh
.claude/: settings.json
.claude/commands/: add-metric.md  analyze-day.md  backtest.md  gex-chart.md
notebooks/: 01_gci_spike_analysis.ipynb  02_multi_metric_backtest.ipynb  0dte_gex_charts.ipynb
src/: CLAUDE.md  __init__.py  black_scholes.py  config.py  data_loader.py  gex_calculator.py  greeks.py  metrics.py  processor.py  put_tracker.py  statistics.py  visualization.py
